--- a/src/Cms/CoreBundle/Resources/views/Welcome/aboutSlides.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/aboutSlides.html.twig
@@ -95,6 +95,8 @@
                         <h2>...and because a small pipe is disproportionately cheaper than a large one, you cut costs!</h2>
                         <h3><i class="icon-usd"></i><i class="icon-thumbs-up-alt"></i><i class="icon-usd"></i></h3>
                     </section>
+                    <section></section>
+                    <section></section>
                 </div>
             </div>
             <div class="row">
