--- a/src/Cms/CoreBundle/Resources/views/Media/edit.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Media/edit.html.twig
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="span3">
-                crop tools here
+                {#crop tools here#}
             </div>
         </section>
     </article>
