--- a/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
@@ -216,7 +216,7 @@
                             </label>
                         </td>
                         <td class="data-group-1">
-                            <h4><a href="http://{{ node.domain }}/{{ node.slug }}">{{ node.title|title }}</a></h4>
+                            <h4><a href="{{ path('cms_core.node_read', {'siteId': site.id, 'id':node.id}) }}">{{ node.title|title }}</a></h4>
                             <p class='node-preview hidden-phone'>
                                 {% if node.views['html'] is defined %}
                                     {{ node.views['html']|striptags|truncate(158) }}
@@ -224,15 +224,15 @@
                                         <a href="/{{ node.slug }}">read more</a>
                                     {% endif %}
                                 {% endif %}
-                                <div class="quick-action-container">
-                                    <ul class="quick-action hide">
-                                        <li><a href="{{ path('cms_core.node_read', {'siteId':site.id, 'id':node.id}) }}">edit</a></li>
-                                        <li>|</li>
-                                        <li><a href="#trash" class="quick-delete-action" data-id="{{ node.id }}">trash</a></li>
-                                        <li>|</li>
-                                        <li><a href="http://{{ node.domain }}/{{ node.slug }}" target="_blank">view</a></li>
-                                    </ul>
-                                </div>
+                                {#<div class="quick-action-container">#}
+                                    {#<ul class="quick-action hide">#}
+                                        {#<li><a href="{{ path('cms_core.node_read', {'siteId':site.id, 'id':node.id}) }}">edit</a></li>#}
+                                        {#<li>|</li>#}
+                                        {#<li><a href="#trash" class="quick-delete-action" data-id="{{ node.id }}">trash</a></li>#}
+                                        {#<li>|</li>#}
+                                        {#<li><a href="http://{{ node.domain }}/{{ node.slug }}" target="_blank">view</a></li>#}
+                                    {#</ul>#}
+                                {#</div>#}
                             </p>
                         </td>
                         {% if node.author.name is defined %}
