--- a/src/Cms/CoreBundle/Resources/views/App/components.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/App/components.html.twig
@@ -99,7 +99,7 @@
         <li><a href="{{ path('cms_core.media_readAll', {'siteId':site.id}) }}"><i class="icon-camera-retro"></i> Media</a></li>
         {#<li><a href="#"><i class="icon-comments"></i> Comments</a></li>#}
         <li class="divider"></li>
-        <li><a href="#"><i class="icon-book"></i> Types</a></li>
+        <li><a href="{{ path('cms_core.types_readAll', {'siteId': site.id}) }}"><i class="icon-book"></i> Types</a></li>
         <li><a href="#users"><i class="icon-group"></i> Users</a></li>
         {#<li><a href="#siteSettings"><i class="icon-cog"></i> Settings</a></li>#}
         {#<li><a href="{{ path('cms_core.settings_theme_current', {'siteId':site.id}) }}"><i class="icon-eye-open"></i> Themes</a></li>#}
