--- a/src/Cms/CoreBundle/Resources/views/Types/edit.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Types/edit.html.twig
@@ -22,20 +22,25 @@
                 <h1>{{ type.name|default('New')|title }} Type</h1>
             </div>
         </section>
-        {% block notices %}
-            {{ parent() }}
-        {% endblock %}
+        {% if notices|length > 0 %}
+            <aside style="margin-top:16px;">
+                {% block notices %}
+                    {{ parent() }}
+                {% endblock %}
+            </aside>
+        {% endif %}
         <section class="row-fluid">
             <div class="span12">
                 <form action="{{ path('cms_core.types_save') }}" method="POST">
+                    <input type="hidden" name="token" value="{{ token }}"/>
                     <input type="hidden" name="siteId" value="{{ site.id }}"/>
                     <input type="hidden" name="id" value="{{ type.id|default() }}"/>
                     <label for="name">Name:</label>
-                    <input type="text" name="name" value="{{ type.name|default() }}" required placeholder="enter name here"/>
+                    <input type="text" name="name" value="{{ type.name|default(name|default()) }}" required placeholder="enter name here" style="height: 22px;"/>
                     <label for="slugPrefix">Slug Prefix:</label>
-                    <input type="text" name="slugPrefix" value="{{ type.slugPrefix|default() }}" placeholder="ie: example/"/>
+                    <input type="text" name="slugPrefix" value="{{ type.slugPrefix|default(slugPrefix|default()) }}" placeholder="ie: example/" style="height: 22px;"/>
                     <label for="description">Description:</label>
-                    <textarea name="description" id="description" cols="30" rows="10" placeholder="Write the description of your content type here">{{ type.description|default() }}</textarea>
+                    <textarea name="description" id="description" cols="30" rows="6" placeholder="Write the description of your content type here">{{ type.description|default(description|default()) }}</textarea>
                     <button class="btn btn-info"><i class="icon-save"></i> Save</button>
                 </form>
             </div>
