--- a/src/Cms/CoreBundle/Resources/views/Types/readAll.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Types/readAll.html.twig
@@ -22,6 +22,13 @@
                 <a href="{{ path('cms_core.types_new', {'siteId':site.id}) }}" id="add-new"><i class="icon-plus-sign"></i> Add New</a>
             </div>
         </section>
+        {% if notices|length > 0 %}
+            <aside style="margin-top:16px;">
+                {% block notices %}
+                    {{ parent() }}
+                {% endblock %}
+            </aside>
+        {% endif %}
         <section class="row-fluid">
             <table class="table table-hover">
                 <thead>
@@ -50,6 +57,7 @@
                         <td><a class="btn btn-info" href="{{ path('cms_core.types_read', {'siteId':site.id, 'id':type.id}) }}"><i class="icon-edit"></i></a></td>
                     <td>
                         <form action="{{ path('cms_core.types_delete') }}" method="POST">
+                            <input type="hidden" name="token" value="{{ token }}"/>
                             <input type="hidden" name="siteId" value="{{ site.id }}"/>
                             <input type="hidden" name="id" value="{{ type.id }}" />
                             <button class="btn btn-danger"><i class="icon-trash"></i></button>
